# testrail-mcp-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
mcp_testrail/: mcp_server.py  testrail_client.py  utils.py
tests/: conftest.py  test_testrail_client_integration.py  test_testrail_client_unit.py
